--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+example-master/
 
 # Created by https://www.toptal.com/developers/gitignore/api/swift,xcode
 # Edit at https://www.toptal.com/developers/gitignore?templates=swift,xcode
